--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
     margin: 5px;
     border: 1px solid blue;
 
-    height: 100vh;
+    /* height: 100vh; */
 
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
@@ -28,13 +28,63 @@ body{
 }
 
 .sidebar{
+
     grid-area: 1 / 1 / 4 / 2;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar div{
+    border: 1px solid brown;
 }
 
 .header{
+
     grid-area: 1 / 2 / 2 / 5;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.header div{
+    border: 1px solid olivedrab
+}
+
+.header .sectionA{
+    display: flex;
+}
+
+.header .sectionB{
+    display: flex;
 }
 
 .mainContent{
+
     grid-area: 2 / 2 / 4 / 5;
+
+    display: grid;
+
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.mainContent .sectionA{
+    grid-area: 1 / 1 / 4 / 3;
+}
+
+.projects{
+
+    display: grid;
+
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.projects div{
+    height: 20vh;
+}
+
+.mainContent .sectionB{
+    grid-area: 1 / 3 / 4 / 4;
 }
