--- a/styles.css
+++ b/styles.css
@@ -82,9 +82,17 @@ body{
 }
 
 .projects div{
-    height: 20vh;
+    border: 1px solid orangered;
 }
 
 .mainContent .sectionB{
     grid-area: 1 / 3 / 4 / 4;
+}
+
+.mainContent .sectionB div{
+    border: 1px solid peru;
+}
+
+.users{
+    display: flex;
 }
