--- a/styles.css
+++ b/styles.css
@@ -243,10 +243,7 @@ body{
 
     grid-area: 2 / 2 / 4 / 5;
 
-    display: grid;
-
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
 
     background-color: #F5F5DC;
     padding: 20px;
@@ -258,7 +255,7 @@ body{
     grid-area: 1 / 1 / 4 / 3;
 }
 
-.mainContent .sectionA .heading{
+.heading{
 
     margin: 5px;
     margin-bottom: 0;
@@ -291,14 +288,14 @@ body{
 
     display: flex;
     background-color: #FFCF9D;
+
+    border-radius: 10px;
 }
 
 .cardHighlight{
 
     background-color: #FFB000;
     width: 20px;
-
-    /* margin-left: 10px; */
 }
 
 .cardContent{
@@ -310,10 +307,6 @@ body{
     flex-direction: column;
 
     gap: 10px;
-}
-
-.cardContent div{
-
 }
 
 .title{
@@ -342,24 +335,113 @@ body{
     gap: 5px;
 }
 
+.buttons button{
+
+    border: 0;
+    background-color: #FFCF9D;
+}
+
+#favorite{
+
+    height: 16px;
+    width: 16px;
+}
+
+#view{
+
+    height: 20px;
+    width: 20px;
+
+    padding-left: 2.5px;
+}
+
+#fork{
+
+    height: 15px;
+    width: 15px;
+}
+
 .mainContent .sectionB{
 
-    border: 1px solid olivedrab;
+    /* border: 1px solid olivedrab; */
     grid-area: 1 / 3 / 4 / 4;
 }
 
 .mainContent .sectionB div{
 
-    margin: 5px;
-    padding: 5px;
+    /* margin: 5px;
+    padding: 5px; */
 
-    border: 1px solid peru;
+    /* border: 1px solid peru; */
 }
 
 .announcements, .trending{
+
     background-color: #FFCF9D;
+
+    margin: 10px;
+    margin-top: 5px;
+    
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 15px;
+    border-radius: 10px;
+}
+
+.slots .title{
+    font-size: 1rem;
+}
+
+.slots .content{
+
+    padding: 0 5px;
+
+    font-family: 'Slabo 27px', serif;
+    font-size: 0.8rem;
+}
+
+.line{
+
+    border: 1px solid peru;
+    opacity: 0.5;
 }
 
 .users{
+
     display: flex;
+
+    justify-content: start;
+    align-items: center;
+}
+
+.users div{
+    /* border: 1px solid black; */
+}
+
+.trendingLogo{
+
+    height: 50px;
+    width: 50px;
+
+    margin-right: 10px;
+}
+
+.trendingTag{
+
+    font-family: 'Wellfleet', monospace;
+    font-size: 1.1rem;
+}
+
+.trendingUsername{
+
+    padding-top: 5px;
+    padding-left: 5px;
+
+    font-family: 'Wellfleet', monospace;
+    font-size: 0.8rem;
+
+    color: grey;
 }
