--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body{
     /* margin: 5px; */
     /* border: 1px solid blue; */
 
-    /* height: 100vh; */
+    height: 100vh;
+    background-color: #F5F5DC;
 
     display: grid;
     grid-template-columns: minmax(300px, 1fr) 4fr; 
@@ -29,7 +30,6 @@ body{
 
 .sidebar{
 
-    /* height: 100vh; */
     grid-area: 1 / 1 / 4 / 2;
 
     display: flex;
@@ -114,6 +114,9 @@ body{
     padding-bottom: 0;
 
     background-color: #FFCF9D;
+
+    box-shadow: 1px 1px 7.5px grey;
+    z-index: 2;
 }
 
 .header div{
@@ -290,12 +293,15 @@ body{
     background-color: #FFCF9D;
 
     border-radius: 10px;
+    
+    box-shadow: 0px 1px 5px grey;
+    z-index: 2;
 }
 
 .cardHighlight{
 
     background-color: #FFB000;
-    width: 20px;
+    width: 15px;
 }
 
 .cardContent{
@@ -321,7 +327,6 @@ body{
 .description{
 
     font-family: 'Slabo 27px', serif;
-    height: 12.5vh;
 
     padding: 5px;
     padding-top: 0;
@@ -364,13 +369,15 @@ body{
 .mainContent .sectionB{
 
     /* border: 1px solid olivedrab; */
+
     grid-area: 1 / 3 / 4 / 4;
+    padding-left: 15px;
 }
 
 .mainContent .sectionB div{
 
-    /* margin: 5px;
-    padding: 5px; */
+    /* margin: 5px; */
+    /* padding: 5px; */
 
     /* border: 1px solid peru; */
 }
@@ -381,7 +388,7 @@ body{
 
     margin: 10px;
     margin-top: 5px;
-    
+
     padding: 20px;
 
     display: flex;
@@ -389,6 +396,9 @@ body{
 
     gap: 15px;
     border-radius: 10px;
+
+    box-shadow: 0px 1px 5px grey;
+    z-index: 2;
 }
 
 .slots .title{
